Make sure dropdown vertical alignment with button,button group and so on.

--- a/src/Dropdown/styles/common.less
+++ b/src/Dropdown/styles/common.less
@@ -15,6 +15,7 @@
   position: relative;
   display: inline-block;
   font-size: 0;
+  vertical-align: middle; // Make sure dropdown vertical alignment with button,button group and so on.
 
   // Dropdown button style
   .@{ns}btn {
